# SCG-prediction

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirement.txt  requirements.txt
configs/: advanced_baseline.yaml  baseline.yaml  calibrated_split.yaml  calibrated_split_v3.yaml  data.yaml  data_v3.yaml  eval.yaml  protocol_report.yaml  report.yaml  split.yaml  split_v3.yaml  train.yaml  train_v3.yaml
docs/: experiment_matrix.md
scripts/local/: init_and_push.ps1
scripts/remote/: bootstrap_server.sh  launch_ablation_matrix.sh  launch_parallel_models.sh  pull_and_train.sh  run_with_gpu_guard.sh  train_v3_8gpu.sh
src/: __init__.py  __main__.py  advanced_baselines.py  baselines.py  evaluate.py  make_calibrated_splits.py  make_splits.py  prepare_data.py  protocol_report.py  report.py  train.py
src/scg_bp/: __init__.py  advanced_baselines.py  baselines.py  calibrated_split.py  cli.py  config.py  evaluate.py  io_bp.py  io_scg.py  models.py  prepare_data.py  protocol_report.py  report.py  split.py  train.py  utils.py
src/scg_bp/data/: __init__.py  io_bp.py  prepare.py  windowing.py
src/scg_bp/modeling/: __init__.py  advanced_baselines.py  baselines.py  models.py  train.py
src/scg_bp/reporting/: __init__.py  evaluate.py  protocol.py  report.py
src/scg_bp/splits/: __init__.py  calibrated.py  standard.py
tests/: test_smoke.py
tests/fixtures/: BP_text.csv
