[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scg-bp"
version = "0.1.0"
description = "SCG blood pressure prediction pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<2.0",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "torch>=2.1",
  "openpyxl>=3.1",
  "scikit-learn>=1.3"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
